# snooze

./: .gitignore  README.md  pyproject.toml  run_tests.py  test_filtering_improvements.py  test_pipeline.py
src/snooze/: __init__.py  crawler.py  main.py  storage.py  summarizer.py  visualizer.py
src/snooze/static/css/: style.css
src/snooze/static/js/: app.js
src/snooze/templates/: index.html
tests/: test_crawler.py  test_integration.py  test_summarizer.py  test_visualizer.py
