[project]
name = "snooze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arist12", email = "ykzhang@cs.wisc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "praw>=7.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
