[project]
name = "snooze"
version = "0.1.0"
description = "Snooze is a Python application that analyzes and visualizes Reddit discussions about AI coding tools."
readme = "README.md"
authors = [
    { name = "Arist12", email = "ykzhang@cs.wisc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.108.1",
    "praw>=7.8.1",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
snooze = "snooze.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
